# air-model-template-repo

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  readme.MD  repoconfig.yaml
.github/: filepaths.sh
.github/workflows/: build-master.yaml  build-pr.yaml  delete-pr.yaml
functions/templatefunction/function/: config.yaml  handler.py  requirements.txt
functions/templatefunction/test/: conftest.py  test_handler.py
